--- a/style.css
+++ b/style.css
@@ -8,10 +8,22 @@ body {
 #send {
     background-color: #338cff;
     border: none;
-    border-radius: 20px;
+    border-radius: 40px;
     color: white;
-    font-size: 16px;
+    font-size: 32px;
     margin-top: 20px;
     padding: 15px 32px;
+    text-decoration: none;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 1000px;
+}
+.message {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
